# softplus-power

./: .gitignore  LICENSE  README.md  environment.yml  pyproject.toml
scripts/: plot_activations.py
src/softplus_power/: __init__.py  common.py  jax.py  keras.py  numpy.py  torch.py
tests/: test_keras.py  test_numpy.py  test_presets.py  test_torch.py
