[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "softplus-power"
version = "0.1.0"
description = "A biologically-inspired Softplus^p activation for PyTorch, Keras, and JAX"
readme = "README.md"
license = {file = "LICENSE"}
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.9"
keywords = ["deep learning", "activation", "neuroscience", "pytorch", "tensorflow", "keras", "jax"]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.optional-dependencies]
torch = ["torch>=2.1"]
keras = ["tensorflow>=2.12"]
jax = ["jax>=0.4.23", "jaxlib>=0.4.23"]

[tool.setuptools.packages.find]
where = ["src"]
